external/SDK Guard/BCPP/ZGuard.h

#define ZG_DEVTYPE_CVTS					0x26
// Информация о конвертере, возвращаемая функцией ZG_EnumConverters
typedef struct _ZG_ENUM_CVT_INFO : _ZP_DEVICE_INFO {
	ZG_CVT_TYPE nType;		// Тип конвертера
	ZG_GUARD_MODE nMode;	// Режим работы конвертера Guard
} *PZG_ENUM_CVT_INFO;
// Режим прохода контроллера
enum ZG_CTR_MODE
{
	ZG_MODE_UNDEF = 0,
	ZG_MODE_NORMAL,			// Обычный режим работы
	ZG_MODE_BLOCK,			// Блокировка (проходить могут только "блокирующие" карты)
	ZG_MODE_FREE,			// Свободный (замок обесточен, при поднесении карты регистрируются)
	ZG_MODE_WAIT			// Ожидание (обычный режим работы, при поднесении допустимой карты переход в режим "Free")
};
// Конфигурация управления электропитанием
typedef struct _ZG_CTR_ELECTRO_CONFIG
{
	ZG_CTRECC_FLAGS nPowerConfig;	// Конфигурация управления питанием
	DWORD nPowerDelay;		// Время задержки в секундах
	_ZG_CTR_TIMEZONE rTz6;	// Временная зона №6 (считаем от 0)
} *PZG_CTR_ELECTRO_CONFIG;
// Состояние электропитания
typedef struct _ZG_CTR_ELECTRO_STATE {
	ZG_CTRECS_FLAGS nPowerFlags;		// Флаги состояния электропитания
	ZG_CTRECC_FLAGS nPowerConfig;		// Конфигурация управления питанием
	DWORD nPowerDelay;		// Время задержки в секундах
} *PZG_CTR_ELECTRO_STATE;
// Режим Охрана
enum ZG_SECUR_MODE
{
	ZG_SR_M_UNDEF = 0,		// Не определено
	ZG_SR_M_SECUR_OFF,		// Выключить режим охраны
	ZG_SR_M_SECUR_ON,		// Включить режим охраны
	ZG_SR_M_ALARM_OFF,		// Выключить тревогу
	ZG_SR_M_ALARM_ON		// Включить тревогу
};
// Устаревшие типы
typedef BOOL (CALLBACK* ZG_ENUMCVTSPROC) (PZG_ENUM_CVT_INFO pInfo, PZP_PORT_INFO pPort, PVOID pUserData);
typedef BOOL (CALLBACK* ZG_ENUMIPCVTSPROC) (PZG_ENUM_IPCVT_INFO pInfo, PZP_PORT_INFO pPort, PVOID pUserData);
// Возвращает состояние подключения
ZGUARD_API(HRESULT) ZG_Cvt_GetConnectionStatus(HANDLE hHandle, ZP_CONNECTION_STATUS* pValue);
ZGUARD_API(HRESULT) ZG_Cvt_GetNextMessage(HANDLE hHandle, PUINT pMsg, LPARAM* pMsgParam);
ZGUARD_API(HRESULT) ZG_Ctr_GetNextMessage(HANDLE hHandle, PUINT pMsg, LPARAM* pMsgParam);
// Управление режимом Охрана по сети
ZGUARD_API(HRESULT) ZG_Ctr_SetSecurMode(HANDLE hHandle, ZG_SECUR_MODE nMode);
// Запрос состояния режима Охрана
// pSecurFlags - флаги состояния ZG_SR_F_
// pSrcMask - маска разрешенных источников ZG_SR_SRCF_...
// pAlarmTime - время звучания сирены (в секундах)
ZGUARD_API(HRESULT) ZG_Ctr_GetSecurInfo(HANDLE hHandle, PDWORD pSecurFlags,
	PDWORD pSrcMask, PDWORD pAlarmTime);
// Установка параметров режима Охрана
ZGUARD_API(HRESULT) ZG_Ctr_SetSecurConfig(HANDLE hHandle, DWORD nSrcMask, DWORD nAlarmTime,
	PDWORD pSecurFlags=NULL);
// Управление режимами прохода контроллера
ZGUARD_API(HRESULT) ZG_Ctr_SetCtrMode(HANDLE hHandle, ZG_CTR_MODE nMode);
ZGUARD_API(HRESULT) ZG_Ctr_GetCtrModeInfo(HANDLE hHandle, ZG_CTR_MODE* pCurrMode, PDWORD pFlags);
// Функционал "ElectroControl" для Matrix II Net FW v3.X
// Возвращает параметры электропитания (вр.зона с индексом 6)
ZGUARD_API(HRESULT) ZG_Ctr_ReadElectroConfig(HANDLE hHandle, PZG_CTR_ELECTRO_CONFIG pConfig);
// Устанавливает новые параметры электропитания (вр.зона с индексом 6)
ZGUARD_API(HRESULT) ZG_Ctr_WriteElectroConfig(HANDLE hHandle, PZG_CTR_ELECTRO_CONFIG pConfig, BOOL fSetTz=TRUE);
// Возвращает статус электропитания
ZGUARD_API(HRESULT) ZG_Ctr_GetElectroState(HANDLE hHandle, PZG_CTR_ELECTRO_STATE pState);
// Вкл./Выкл. электропитание
ZGUARD_API(HRESULT) ZG_Ctr_SetElectroPower(HANDLE hHandle, BOOL fOn);
inline HRESULT ZG_CloseHandle(HANDLE hHandle) {
	return ZP_CloseHandle(hHandle);
}
#define ZG_EnumMessages			ZP_EnumMessages
#define ZP_SF_USEVCOM	2	// По возможности использовать Com-порт
inline HRESULT ZG_EnumConverters(PZP_PORT_ADDR pPorts, INT nPCount,
		ZG_ENUMCVTSPROC pEnumProc, PVOID pUserData,
		PZP_WAIT_SETTINGS pWait=NULL, UINT nFlags=ZP_SF_UPDATE) DEPRECATED_ATTR {
	HANDLE hSearch;
	_ZP_SEARCH_PARAMS rParams;
	_ZG_ENUM_CVT_INFO rDI;
	_ZP_PORT_INFO rPI;
	int nPortCount;
	ZeroMemory(&rParams, sizeof(rParams));
	rParams.nDevMask = ZG_DEVTYPE_CVTS;
	if (nFlags & ZP_SF_USEVCOM)
		rParams.nFlags |= ZP_SF_USECOM;
	rParams.pPorts	= pPorts;
	rParams.nPCount	= nPCount;
	rParams.pWait	= pWait;
	HRESULT hr = ZP_SearchDevices(&hSearch, &rParams);
	if (FAILED(hr))
		return hr;
	__try {
		rDI.cbSize = sizeof(rDI);
		while ((hr = ZP_FindNextDevice(hSearch, &rDI, &rPI, 1, &nPortCount)) == S_OK) {
			for (int i = 0; i < nPortCount; i++) {
				if (!pEnumProc(&rDI, &rPI, pUserData))
					return ZP_S_CANCELLED;
			}
			rDI.cbSize = sizeof(rDI);
		}
	}
	__finally {
		ZP_CloseHandle(hSearch);
	}
	return hr;
}
inline HRESULT ZG_EnumIpConverters(ZG_ENUMIPCVTSPROC pEnumProc, PVOID pUserData,
	PZP_WAIT_SETTINGS pWait=NULL, UINT nFlags=ZP_SF_UPDATE) DEPRECATED_ATTR {
	HANDLE hSearch;
	_ZP_SEARCH_PARAMS rParams;
	_ZG_ENUM_IPCVT_INFO rDI;
	_ZP_PORT_INFO rPI;
	int nPortCount;
	ZeroMemory(&rParams, sizeof(rParams));
	rParams.nIpDevMask = ZG_IPDEVTYPE_CVTS;
	if (nFlags & ZP_SF_USEVCOM)
		rParams.nFlags |= ZP_SF_USECOM;
	rParams.pWait = pWait;
	HRESULT hr = ZP_SearchDevices(&hSearch, &rParams);
	if (FAILED(hr))
		return hr;
	__try {
		rDI.cbSize = sizeof(rDI);
		while ((hr = ZP_FindNextDevice(hSearch, &rDI, &rPI, 1, &nPortCount)) == S_OK) {
			for (int i = 0; i < nPortCount; i++) {
				if (!pEnumProc(&rDI, &rPI, pUserData))
					return ZP_S_CANCELLED;
			}
			rDI.cbSize = sizeof(rDI);
		}
	}
	__finally {
		ZP_CloseHandle(hSearch);
	}
	return hr;
}
inline HRESULT ZG_FindConverter(PZP_PORT_ADDR pPorts, INT nPCount,
		PZG_ENUM_CVT_INFO pInfo, PZP_PORT_INFO pPort,
		PZP_WAIT_SETTINGS pWait=NULL, UINT nFlags=ZP_SF_UPDATE) DEPRECATED_ATTR {
	HANDLE hSearch;
	_ZP_SEARCH_PARAMS rParams;
	_ZG_ENUM_CVT_INFO rDI;
	_ZP_PORT_INFO aPIs[2];
	int nPortCount;
	ZeroMemory(&rParams, sizeof(rParams));
	rParams.nDevMask = ZG_DEVTYPE_CVTS;
	if (nFlags & ZP_SF_USEVCOM)
		rParams.nFlags |= ZP_SF_USECOM;
	rParams.pPorts	= pPorts;
	rParams.nPCount	= nPCount;
	rParams.pWait	= pWait;
	HRESULT hr = ZP_SearchDevices(&hSearch, &rParams);
	if (FAILED(hr))
		return hr;
	__try {
		rDI.cbSize = sizeof(rDI);
		ZeroMemory(aPIs, sizeof(aPIs));
		hr = ZP_FindNextDevice(hSearch, &rDI, aPIs, _countof(aPIs), &nPortCount);
		if (FAILED(hr))
			return hr;
		if (hr == S_OK) {
			*pInfo = rDI;
			*pPort = aPIs[0];
		}
	}
	__finally {
		ZP_CloseHandle(hSearch);
	}
	return hr;
}
inline HRESULT ZG_Cvt_EnumMessages(HANDLE hHandle, ZP_NOTIFYPROC pEnumProc, PVOID pUserData) DEPRECATED_ATTR {
	HRESULT hr;
	UINT nMsg;
	LPARAM nMsgParam;
	while ((hr = ZG_Cvt_GetNextMessage(hHandle, &nMsg, &nMsgParam)) == S_OK)
		pEnumProc(nMsg, nMsgParam, pUserData);
	if (hr == ZP_S_NOTFOUND)
		hr = S_OK;
	return hr;
}
inline HRESULT ZG_Ctr_EnumMessages(HANDLE hHandle, ZP_NOTIFYPROC pEnumProc, PVOID pUserData) DEPRECATED_ATTR {
	HRESULT hr;
	UINT nMsg;
	LPARAM nMsgParam;
	while ((hr = ZG_Ctr_GetNextMessage(hHandle, &nMsg, &nMsgParam)) == S_OK)
		pEnumProc(nMsg, nMsgParam, pUserData);
	if (hr == ZP_S_NOTFOUND)
		hr = S_OK;
	return hr;
}
inline HRESULT ZG_FindNotification(PHANDLE pHandle, PZP_DD_NOTIFY_SETTINGS pSettings, BOOL fSerial=TRUE, BOOL fIP=TRUE) DEPRECATED_ATTR {
	return ZG_SetNotification(pHandle, pSettings, fSerial, fIP);
}

#endif // !ZGUARD_LINKONREQUEST
typedef HRESULT ZG_STATUS DEPRECATED_ATTR;	// результат выполнения функции DLL