external/SDK Guard/Delphi/ZGuard.pas


function ZG_Ctr_SetSecurMode(AHandle: THandle; AMode: TZG_SECUR_MODE): HResult; stdcall;
        External ZG_DLL_Name name 'ZG_Ctr_SetSecurMode';
function ZG_Ctr_GetSecurInfo(AHandle: THandle; var VSecurFlags: Cardinal;
    var VSrcMask: Cardinal; var VAlarmTime: Cardinal): HResult; stdcall;
        External ZG_DLL_Name name 'ZG_Ctr_GetSecurInfo';
function ZG_Ctr_SetSecurConfig(AHandle: THandle; ASrcMask, AAlarmTime: Cardinal;
    VSecurFlags: PCardinal=nil): HResult; stdcall;
        External ZG_DLL_Name name 'ZG_Ctr_SetSecurConfig';

function ZG_Ctr_SetCtrMode(AHandle: THandle; AMode: TZG_CTR_MODE): HResult; stdcall;
        External ZG_DLL_Name name 'ZG_Ctr_SetCtrMode';
function ZG_Ctr_GetCtrModeInfo(AHandle: THandle; var VMode: TZG_CTR_MODE;
    var VFlags: Cardinal): HResult; stdcall;
        External ZG_DLL_Name name 'ZG_Ctr_GetCtrModeInfo';

function ZG_Ctr_ReadElectroConfig(AHandle: THandle;
    var VConfig: TZG_CTR_ELECTRO_CONFIG): HResult; stdcall;
        External ZG_DLL_Name name 'ZG_Ctr_ReadElectroConfig';
function ZG_Ctr_WriteElectroConfig(AHandle: THandle;
    Const AConfig: TZG_CTR_ELECTRO_CONFIG; ASetTz: LongBool): HResult; stdcall;
        External ZG_DLL_Name name 'ZG_Ctr_WriteElectroConfig';

function ZG_Ctr_GetElectroState(AHandle: THandle;
    var VState: TZG_CTR_ELECTRO_STATE): HResult; stdcall;
        External ZG_DLL_Name name 'ZG_Ctr_GetElectroState';
function ZG_Ctr_SetElectroPower(AHandle: THandle;
    AOn: LongBool): HResult; stdcall;
        External ZG_DLL_Name name 'ZG_Ctr_SetElectroPower';

function ZG_EnumConverters(APorts: PZP_PORT_ADDR; APCount: Integer;
    AEnumProc: TZG_ENUMCVTSPROC; AUserData: Pointer;
    AWait: PZP_WAIT_SETTINGS; AFlags: Cardinal): HResult;
var
  hSearch: THandle;
  rParams: TZp_Search_Params;
  rDI: TZg_Enum_Cvt_Info;
  rPI: TZp_Port_Info;
  nCount: Integer;
begin
  FillChar(rParams, SizeOf(rParams), 0);
  rParams.nDevMask := ZG_DEVTYPE_CVTS;
  if (AFlags and ZP_SF_USEVCOM) <> 0 then
    rParams.nFlags := ZP_SF_USECOM;
  rParams.pPorts := APorts;
  rParams.nPCount := APCount;
  rParams.pWait := AWait;
  Result := ZP_SearchDevices(hSearch, rParams);
  if Failed(Result) then
    Exit;
  try
    repeat
      rDI.rBase.cbSize := SizeOf(rDI);
      Result := ZP_FindNextDevice(hSearch, @rDI, @rPI, 1, nCount);
      if Result <> S_OK then
        break;
      if not AEnumProc(@rDI, rPI, AUserData) then
        Exit(ZP_S_CANCELLED);
    until False;
  finally
    ZG_CloseHandle(hSearch);
  end;
end;

function ZG_EnumIpConverters(AEnumProc: TZG_ENUMIPCVTSPROC; AUserData: Pointer;
    AWait: PZP_WAIT_SETTINGS; AFlags: Cardinal): HResult;
var
  hSearch: THandle;
  rParams: TZp_Search_Params;
  rDI: TZg_Enum_IpCvt_Info;
  aPIs: array[0..1] of TZp_Port_Info;
  nCount, i: Integer;
begin
  FillChar(rParams, SizeOf(rParams), 0);
  rParams.nDevMask := ZG_DEVTYPE_CVTS;
  rParams.pWait := AWait;
  Result := ZP_SearchDevices(hSearch, rParams);
  if Failed(Result) then
    Exit;
  try
    repeat
      rDI.rBase.cbSize := SizeOf(rDI);
      Result := ZP_FindNextDevice(hSearch, @rDI, @aPIs, Length(aPIs), nCount);
      if Result <> S_OK then
        break;
      for i := 0 to nCount - 1 do
        if not AEnumProc(@rDI, aPIs[i], AUserData) then
          Exit(ZP_S_CANCELLED);
    until False;
  finally
    ZG_CloseHandle(hSearch);
  end;
end;

function ZG_FindConverter(APorts: PZP_PORT_ADDR; APCount: Integer;
    var VInfo: TZG_ENUM_CVT_INFO; var VPort: TZP_PORT_INFO;
    AWait: PZP_WAIT_SETTINGS; AFlags: Cardinal): HResult;
var
  hSearch: THandle;
  rParams: TZp_Search_Params;
  rDI: TZg_Enum_Cvt_Info;
  rPI: TZp_Port_Info;
  nCount: Integer;
begin
  FillChar(rParams, SizeOf(rParams), 0);
  rParams.nDevMask := ZG_DEVTYPE_CVTS;
  if (AFlags and ZP_SF_USEVCOM) <> 0 then
    rParams.nFlags := ZP_SF_USECOM;
  rParams.pPorts := APorts;
  rParams.nPCount := APCount;
  rParams.pWait := AWait;
  Result := ZP_SearchDevices(hSearch, rParams);
  if Failed(Result) then
    Exit;
  try
    rDI.rBase.cbSize := SizeOf(rDI);
    Result := ZP_FindNextDevice(hSearch, @rDI, @rPI, 1, nCount);
    if Result <> S_OK then
      Exit;
    VInfo := rDI;
    VPort := rPI;
  finally
    ZG_CloseHandle(hSearch);
  end;
end;
function ZG_EnumMessages(AHandle: THandle; AEnumProc: TZP_NOTIFYPROC; AUserData: Pointer): HResult;
begin
  Result := ZP_EnumMessages(AHandle, AEnumProc, AUserData);
end;
function ZG_Cvt_EnumMessages(AHandle: THandle;
    AEnumProc: TZP_NOTIFYPROC; AUserData: Pointer): HResult;
var
  nMsg: Cardinal;
  nMsgParam: NativeInt;
begin
  repeat
    Result := ZG_Cvt_GetNextMessage(AHandle, nMsg, nMsgParam);
    if Result <> S_OK then
      break;
    AEnumProc(nMsg, nMsgParam, AUserData);
  until False;
  if Result = ZP_S_NOTFOUND then
    Result := S_OK;
end;
function ZG_Ctr_EnumMessages(AHandle: THandle;
    AEnumProc: TZP_NOTIFYPROC; AUserData: Pointer): HResult;
var
  nMsg: Cardinal;
  nMsgParam: NativeInt;
begin
  repeat
    Result := ZG_Ctr_GetNextMessage(AHandle, nMsg, nMsgParam);
    if Result <> S_OK then
      break;
    AEnumProc(nMsg, nMsgParam, AUserData);
  until False;
  if Result = ZP_S_NOTFOUND then
    Result := S_OK;
end;
function ZG_Cvt_GetPortStatus(AHandle: THandle; var VValue: TZP_CONNECTION_STATUS): HResult;
begin
  Result := ZG_Cvt_GetConnectionStatus(AHandle, VValue);
end;

end.
